moved compiler test in the same module and removed compiler-test module